--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "keen-slider": "^6.8.3",
     "next": "13.0.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
